# informatique-repartite-concurente

./: CMakeLists.txt  README.md  main.c
observateur/: CMakeLists.txt  observateur.c  observateur.h
slave/: CMakeLists.txt  client.c  client.h  init.c  init.h  intelligence.c  intelligence.h  server.c  server.h  trace.c  trace.h
utils/: CMakeLists.txt  comunication.h  convert.c  convert.h  productor_consomateur.c  productor_consomateur.h  shared_mem.c  shared_mem.h  wrap_pipe.c  wrap_pipe.h  wrap_sem.c  wrap_sem.h  wrap_signal.c  wrap_signal.h
